objects/AWS_Credentials__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Access_Key__c</fullName>
        <label>Access Key</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bucket_Name__c</fullName>
        <description>Name of the bucket the credentials have access to.</description>
        <label>Bucket Name</label>
        <length>60</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secret_Key__c</fullName>
        <label>Secret Key</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <label>AWS Credentials</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Bucket_Name__c</columns>
        <columns>Access_Key__c</columns>
        <columns>Secret_Key__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>